se realizo ejercicio4

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <title>Trabajo Practico n° 3</title>
   </head>
   <body>
-    <script src="./js/ejercicio1.js"></script>
+    <!-- <script src="./js/ejercicio1.js"></script> -->
+    <!-- <script src="./js/ejercicio2.js"></script> -->
+    <script src="./js/ejercicio4.js"></script>
   </body>
 </html>
+ 
